--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 
 
 
-    <script src="js/nouislider.min.js"></script>
     <script src="js/machinery/motifMath.js"></script>
     <script src="js/machinery/markupUI.js"></script>
     <script src="js/machinery/errorHandling.js"></script>
@@ -31,7 +30,7 @@
     <script src="js/machinery/motifModule.js"></script>
     <script src="js/machinery/markup.js"></script>
     <script src="js/machinery/giveSitesToMotifs.js"></script>
-    <script src="js/machinery/pValueSlider.js"></script>
+    <script src="js/machinery/pSlider.js"></script>
 
 
     <link rel="stylesheet" href="css/mainPage.css">
@@ -70,6 +69,7 @@
             <label for="pValue">-log10(P-value):</label>
             <input type="text" id="pValueLog" class='slider' style="border:0; color:black; font-weight:bold; width: 60px;">
         </p>
+
 
         <div id="result" class="box"></div>
     </div>
