added FASTA parsing -textParsingModule

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="js/machinery/markup.js"></script>
     <script src="js/machinery/giveSitesToMotifs.js"></script>
     <script src="js/machinery/pSlider.js"></script>
+    <script src="js/machinery/textParsingModule.js"></script>
 
 
     <link rel="stylesheet" href="css/mainPage.css">
