-added module description and future tasks in the main file -name refactoring

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <script src="js/nouislider.min.js"></script>
     <script src="js/machinery/markupUI.js"></script>
     <script src="js/machinery/errorHandling.js"></script>
-    <script src="js/machinery/tableModule.js"></script>
-    <script src="js/machinery/segmentationModule.js"></script>
+    <script src="js/machinery/motifTable.js"></script>
+    <script src="js/machinery/motifSegmentation.js"></script>
     <script src="js/machinery/motifModule.js"></script>
     <script src="js/machinery/markup.js"></script>
-    <script src="js/machinery/giveSitesToMotifs.js"></script>
+
     <script src="js/machinery/pSlider.js"></script>
-    <script src="js/machinery/textParsingModule.js"></script>
+    <script src="js/machinery/inputParsing.js"></script>
 
 
     <link rel="stylesheet" href="css/mainPage.css">
