--- a/index.html
+++ b/index.html
@@ -25,14 +25,21 @@
     <script src="js/machinery/motifMath.js"></script>
     <script src="js/nouislider.min.js"></script>
     <script src="js/machinery/markupUI.js"></script>
-    <script src="js/machinery/errorHandling.js"></script>
+
+
+
+    <script src="js/machinery/errorHandler.js"></script>
+
+
     <script src="js/machinery/motifTable.js"></script>
     <script src="js/machinery/motifSegmentation.js"></script>
-    <script src="js/machinery/motifModule.js"></script>
+    <script src="js/machinery/motif.js"></script>
     <script src="js/machinery/markup.js"></script>
 
     <script src="js/machinery/pSlider.js"></script>
     <script src="js/machinery/inputParsing.js"></script>
+    <script src="js/machinery/motifHandler.js"></script>
+
 
 
     <link rel="stylesheet" href="css/mainPage.css">
@@ -64,11 +71,11 @@
             <div class="sliderBox">
                 <div class="inputBox">
                     <p>
-                        <label for='pValue' class='label'>P-value:</label>
+                        <label for='linearSlider-input' class='label'>P-value:</label>
                         <input type='text' class='input' id="linearSlider-input">
                     </p>
                     <p>
-                        <label for='pValue' class='label'>-log10(P-value):</label>
+                        <label for='logSlider-input' class='label'>-log10(P-value):</label>
                         <input type='text' class='input' id="logSlider-input">
                     </p>
                 </div>
