-added motif highlighting -css sheet slitted according to UI objects

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="js/machinery/motifSegmentation.js"></script>
     <script src="js/machinery/motif.js"></script>
     <script src="js/machinery/markup.js"></script>
+    <script src="js/machinery/markupModule.js"></script>
 
     <script src="js/machinery/pSlider.js"></script>
     <script src="js/machinery/inputParsing.js"></script>
@@ -46,6 +47,7 @@
     <link rel="stylesheet" href="css/dataTable.css">
     <link rel="stylesheet" href="css/nouislider.min.css">
     <link rel="stylesheet" href="css/pSlider.css">
+    <link rel="stylesheet" href="css/resultAndSeqInput.css">
 </head>
 <body>
     <div class='container'>
