-added motifLibrary module

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <script src="js/machinery/motifHandler.js"></script>
     <script src="js/machinery/colorPicker.js"></script>
     <script src="js/machinery/motifPicker.js"></script>
+    <script src="js/machinery/motifLibrary.js"></script>
 
 
 
