--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script src="js/machinery/motifTable.js"></script>
     <script src="js/machinery/motifSegmentation.js"></script>
     <script src="js/machinery/motif.js"></script>
-    <script src="js/machinery/markupModule.js"></script>
+    <script src="js/machinery/markup.js"></script>
 
     <script src="js/machinery/pSlider.js"></script>
     <script src="js/machinery/inputParsing.js"></script>
