-fixed bug with search

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div id="motif-picker">
             <form id="search-form" >
                 <button type='button' id="showMotifListButton" class="button">Show motifs</button>
-                <input type="text" id="search" placeholder="Type here..." autofocus>
+                <input type="value" id="search" placeholder="Type here..." autofocus>
             </form>
             <div id='motif-list'></div>
         </div>
