--- a/index.html
+++ b/index.html
@@ -32,25 +32,19 @@
     <script type="text/javascript" src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js"></script>
 
 
-
-
     <!--Color picker - Spectrum -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
 
 
-
     <script src="js/machinery/motifMath.js"></script>
     <script src="js/nouislider.min.js"></script>
-    <script src="js/machinery/markupUI.js"></script>
-
-
+    <script src="js/machinery/AppContainer.js"></script>
 
     <script src="js/machinery/errorHandler.js"></script>
 
-
     <script src="js/machinery/motifTable.js"></script>
-    <script src="js/machinery/motifSegmentation.js"></script>
+    <script src="js/machinery/segmentation.js"></script>
     <script src="js/machinery/motif.js"></script>
     <script src="js/machinery/markup.js"></script>
 
@@ -60,8 +54,7 @@
     <script src="js/machinery/colorPicker.js"></script>
     <script src="js/machinery/motifPicker.js"></script>
     <script src="js/machinery/motifLibrary.js"></script>
-
-
+    <script src="js/machinery/uiBuilder.js"></script>
 
 
     <link rel="stylesheet" href="css/mainPage.css">
@@ -136,7 +129,6 @@
 
 </div>
 
-
 <table id="example" class="display cell-border compact" width="100%">
     <thead>
     <tr>
@@ -161,7 +153,6 @@
     </tr>
     </tfoot>
 </table>
-
 
 </body>
 </html>
