--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="js/machinery/motifPicker.js"></script>
     <script src="js/machinery/motifLibrary.js"></script>
     <script src="js/machinery/uiBuilder.js"></script>
+    <script src="js/machinery/resultContainer.js"></script>
 
 
     <link rel="stylesheet" href="css/mainPage.css">
