-eventHandler model's been added to UIBuilder, motifLibrary, pSlider, motifPicker: ExternalComponent -now motif markup is set when we picking a motif or when we exclude it

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     <link rel="stylesheet" href="css/resultAndSeqInput.css">
     <link rel="stylesheet" href="css/colorPicker.css">
     <link rel="stylesheet" href="css/motifPicker.css">
+    <link rel="stylesheet" href="css/resultContainer.css">
+
 </head>
 <body>
 <div class='container'>
