-now we update Result after any input in TextField -sequenceConstructor's been refactored -resultContainer tooltip remove method now don't use jQuery -segment "id" attribute changed to "start" attribute

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 
-    <title>Motif markup</title>
+    <title>Motif sequenceConstructor</title>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
@@ -46,7 +46,7 @@
     <script src="js/machinery/motifTable.js"></script>
     <script src="js/machinery/segmentation.js"></script>
     <script src="js/machinery/motif.js"></script>
-    <script src="js/machinery/markup.js"></script>
+    <script src="js/machinery/sequenceConstructor.js"></script>
 
     <script src="js/machinery/pSlider.js"></script>
     <script src="js/machinery/inputParsing.js"></script>
@@ -103,7 +103,7 @@
 
     <div>
         <form>
-            <textarea  name="sequenceInput" id="sequenceInput" rows="3" autofocus spellcheck=false placeholder="Put sequence here...">AAAGTGCTGCTGAGGCGTAGAGCGTCGGCTGATGCGCTTGACTAGACTAACGTTA</textarea>
+            <textarea  name="sequenceInput" id="sequenceInput" rows="3" autofocus spellcheck=false placeholder="Put a sequence here...">AAAGTGCTGCTGAGGCGTAGAGCGTCGGCTGATGCGCTTGACTAGACTAACGTTA</textarea>
             <button type="button" id="markupButton" class="button">Markup</button>
             <button type="button" id="clearButton" class="button">Clear</button>
             <button type="button" id="clearFormattingButton" class="button">Clear formatting</button>
