--- a/index.html
+++ b/index.html
@@ -76,56 +76,33 @@
             <form id="search-form" >
                 <button type='button' id="showMotifListButton" class="button">Show motifs</button>
                 <input type="text" id="search" placeholder="Type here..." autofocus>
+                <button type="button" id="markupButton" class="button">Markup</button>
             </form>
             <div id='motif-list'></div>
         </div>
-
         <div id='motif-list-selected'></div>
+    </div>
+
+    <div id="input-area">
+        <textarea  name="sequenceInput" id="sequenceInput" rows="3" autofocus spellcheck=false
+                   placeholder="Put a sequence here...">AAAGTGCTGCTGAGGCGTAGAGCGTCGGCTGATGCGCTTGACTAGACTAACGTTA</textarea>
+    </div>
 
 
-        <!--
-        <div id="color-picker">
-            <div id="picker" class="block">
-                <div class="ui-color-picker" data-topic="picker" data-mode="HSL">
-                    <input id='colorpicker' />
-                </div>
-                <div id="picker-samples" sample-id="master"></div>
-                <div id="controls">
-                    <div id="delete">
-                        <div id="trash-can"></div>
-                    </div>
-                </div>
+    <div class="sliderBox">
+        <div id='logSlider' class='slider'></div>
+        <div class="inputBox">
+            <div class="inputUnit">
+                <label for='logSlider-input' class='label'>-log10(P-value):</label>
+                <input type='text' class='input' id="logSlider-input">
+            </div>
+            <div class="inputUnit">
+                <label for='linearSlider-input' class='label'>P-value:</label>
+                <input type='text' class='input' id="linearSlider-input">
             </div>
         </div>
-        -->
-
     </div>
 
-    <div>
-        <form>
-            <textarea  name="sequenceInput" id="sequenceInput" rows="3" autofocus spellcheck=false placeholder="Put a sequence here...">AAAGTGCTGCTGAGGCGTAGAGCGTCGGCTGATGCGCTTGACTAGACTAACGTTA</textarea>
-            <button type="button" id="markupButton" class="button">Markup</button>
-            <button type="button" id="clearButton" class="button">Clear</button>
-            <button type="button" id="clearFormattingButton" class="button">Clear formatting</button>
-        </form>
-    </div>
-
-
-    <div>
-        <div class="sliderBox">
-            <div class="inputBox">
-                <p>
-                    <label for='logSlider-input' class='label'>-log10(P-value):</label>
-                    <input type='text' class='input' id="logSlider-input">
-                </p>
-                <p>
-                    <label for='linearSlider-input' class='label'>P-value:</label>
-                    <input type='text' class='input' id="linearSlider-input">
-                </p>
-            </div>
-            <p id='logSlider' class='slider'></p>
-        </div>
-    </div>
 
     <div id="result" class="box"></div>
 
