-Now we have tooltip container

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     <div id="motif-setup">
         <div id="motif-picker">
             <form id="search-form" >
-                <button type='button' id="showMotifListButton" class="button">Show motifs</button>
+                <button type='button' id="showMotifListButton" class="button round">Show motifs</button>
                 <input type="text" id="search" placeholder="Type here..." autofocus>
-                <button type="button" id="markupButton" class="button">Markup</button>
+                <button type="button" id="markupButton" class="button round">Markup</button>
             </form>
             <div id='motif-list'></div>
         </div>
@@ -84,7 +84,7 @@
     </div>
 
     <div id="input-area">
-        <textarea  name="sequenceInput" id="sequenceInput" rows="3" autofocus spellcheck=false
+        <textarea  name="sequenceInput" id="sequenceInput" class="round" rows="3" autofocus spellcheck=false
                    placeholder="Put a sequence here...">AAAGTGCTGCTGAGGCGTAGAGCGTCGGCTGATGCGCTTGACTAGACTAACGTTA</textarea>
     </div>
 
@@ -103,8 +103,8 @@
         </div>
     </div>
 
-
-    <div id="result" class="box"></div>
+    <div id="tooltip-container" class="round"></div>
+    <div id="result" class="box round"></div>
 
 
 </div>
