--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <div id="motif-picker">
             <form id="search-form" >
                 <button type='button' id="showMotifListButton" class="button round">Show motifs</button>
+                <button type='button' id="showSeqButton" class="button round">Show sequence</button>
                 <input type="text" id="search" placeholder="Type here..." autofocus>
                 <button type="button" id="markupButton" class="button round">Markup</button>
             </form>
