-Now we are using scss\sass preprocessors

--- a/index.html
+++ b/index.html
@@ -66,10 +66,47 @@
     <link rel="stylesheet" href="css/colorPicker.css">
     <link rel="stylesheet" href="css/motifPicker.css">
     <link rel="stylesheet" href="css/resultContainer.css">
+    <link rel="stylesheet" href="css/navigationBar.css">
 
 </head>
 <body>
-<div class='container'>
+<div>
+    <nav class="the-nav clear-fix">
+        <div class='nav-bar container'>
+            <!-- Structure -->
+            <ul class="nav pull-left">
+                <li class="drop-down">
+                    <a href="#">Dogs <b class="caret"></b></a>
+                    <ul class="sub-nav">
+                        <li><a href="#">Terrier</a></li>
+                    </ul>
+                </li>
+                <li class="drop-down">
+                    <a href="#">Cats  <b class="caret"></b></a>
+                    <ul class="sub-nav">
+                        <li><a href="#">Persian</a></li>
+                    </ul>
+                </li>
+                <li class="drop-down">
+                    <a href="#">Primates  <b class="caret"></b></a>
+                    <ul class="sub-nav">
+                        <li><a href="#">Monkey</a></li>
+                    </ul>
+                </li>
+                <li class="drop-down">
+                    <a href="#">Reptiles  <b class="caret"></b></a>
+                    <ul class="sub-nav">
+                        <li><a href="#">Boa</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="nav pull-right">
+                <li><a href="#">Congress </a></li>
+                <li><a href="#">Blog </a></li>
+                <li><a href="#">Contact Us </a></li>
+            </ul>
+        </div>
+    </nav>
 
     <div id="motif-setup">
         <div id="motif-picker">
