-added top menu scratch

--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
     <link rel="stylesheet" href="css/nouislider.min.css">
     <link rel="stylesheet" href="css/pSlider.css">
     <link rel="stylesheet" href="css/resultAndSeqInput.css">
-    <link rel="stylesheet" href="css/colorPicker.css">
     <link rel="stylesheet" href="css/motifPicker.css">
     <link rel="stylesheet" href="css/resultContainer.css">
     <link rel="stylesheet" href="css/navigationBar.css">
@@ -71,42 +70,43 @@
 </head>
 <body>
 <div>
-    <nav class="the-nav clear-fix">
-        <div class='nav-bar container'>
+    <div class='nav-bar container'>
+        <nav class="the-nav clearfix">
             <!-- Structure -->
             <ul class="nav pull-left">
-                <li class="drop-down">
+                <li class="dropdown">
                     <a href="#">Dogs <b class="caret"></b></a>
                     <ul class="sub-nav">
                         <li><a href="#">Terrier</a></li>
                     </ul>
                 </li>
-                <li class="drop-down">
+                <li class="dropdown">
                     <a href="#">Cats  <b class="caret"></b></a>
                     <ul class="sub-nav">
                         <li><a href="#">Persian</a></li>
                     </ul>
                 </li>
-                <li class="drop-down">
+                <li class="dropdown">
                     <a href="#">Primates  <b class="caret"></b></a>
                     <ul class="sub-nav">
                         <li><a href="#">Monkey</a></li>
                     </ul>
                 </li>
-                <li class="drop-down">
+                <li class="dropdown">
                     <a href="#">Reptiles  <b class="caret"></b></a>
                     <ul class="sub-nav">
                         <li><a href="#">Boa</a></li>
                     </ul>
                 </li>
             </ul>
-            <ul class="nav pull-right">
+            <ul class="nav pull-right contacts">
                 <li><a href="#">Congress </a></li>
                 <li><a href="#">Blog </a></li>
                 <li><a href="#">Contact Us </a></li>
             </ul>
-        </div>
-    </nav>
+        </nav>
+    </div>
+
 
     <div id="motif-setup">
         <div id="motif-picker">
