-top menu now resizable and changes at 800px

--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
     <div class='nav-bar container'>
         <nav class="the-nav clearfix">
             <!-- Structure -->
-            <ul class="nav pull-left">
+            <ul class="nav pull-left top-second">
                 <li class="dropdown">
-                    <a href="#">Dogs <b class="caret"></b></a>
+                    <a href="#">Export <b class="caret"></b></a>
                     <ul class="sub-nav">
                         <li><a href="#">Terrier</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#">Cats  <b class="caret"></b></a>
+                    <a href="#">Show  <b class="caret"></b></a>
                     <ul class="sub-nav">
-                        <li><a href="#">Persian</a></li>
+                        <li><a id="showMotifListButton" href="#">Motifs</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -99,10 +99,14 @@
                     </ul>
                 </li>
             </ul>
-            <ul class="nav pull-right contacts">
-                <li><a href="#">Congress </a></li>
-                <li><a href="#">Blog </a></li>
-                <li><a href="#">Contact Us </a></li>
+            <ul class="nav pull-left top-first">
+                <li class="search-container">
+                    <input type="text" id="search" placeholder="Select motif..." autofocus>
+                </li>
+            </ul>
+            <ul class="nav pull-right top-second">
+                <li><a href="#">Help </a></li>
+                <li><a href="#">About </a></li>
             </ul>
         </nav>
     </div>
@@ -111,10 +115,6 @@
     <div id="motif-setup">
         <div id="motif-picker">
             <form id="search-form" >
-                <button type='button' id="showMotifListButton" class="button round">Show motifs</button>
-                <button type='button' id="showSeqButton" class="button round">Show sequence</button>
-                <input type="text" id="search" placeholder="Type here..." autofocus>
-                <button type="button" id="markupButton" class="button round">Markup</button>
             </form>
             <div id='motif-list'></div>
         </div>
