--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
                 <li class="dropdown">
                     <a href="#">Export <b class="caret"></b></a>
                     <ul class="sub-nav">
-                        <li><a href="#">Terrier</a></li>
+                        <li>
+                            <a href="#">Table</a>
+                            <a id="dtTest"></a>
+                        </li>
                     </ul>
                 </li>
                 <li class="dropdown">
