--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <!--Data tables (buttons) -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.2.4/css/buttons.dataTables.min.css"/>
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/dataTables.buttons.min.js"></script>
-        <!--Data tables (buttons) -->
+    <!--Data tables (buttons) -->
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.colVis.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.flash.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.html5.min.js"></script>
-        <!--Data tables (buttons) [jszip, pdfmake, vfs_fonts] alert: fonts must be after pdfmake -->
+    <!--Data tables (buttons) [jszip, pdfmake, vfs_fonts] alert: fonts must be after pdfmake -->
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js"></script>
     <script type="text/javascript" src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js"></script>
     <script type="text/javascript" src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js"></script>
@@ -119,13 +119,11 @@
         </nav>
     </div>
 
-    <div id="motif-setup" class="interface-component">
-        <div id="motif-picker">
-            <div id='motif-list'></div>
-        </div>
+    <div id="motif-picker" class="interface-component">
+        <div id='motif-list'></div>
     </div>
 
-    <div id="input-area" class="interface-component">
+    <div class="input-area interface-component">
         <textarea  name="sequenceInput" id="sequenceInput" class="round" rows="3" autofocus spellcheck=false
                    placeholder="Put a sequence here...">AAAGTGCTGCTGAGGCGTAGAGCGTCGGCTGATGCGCTTGACTAGACTAACGTTA</textarea>
     </div>
